# RoastMyStartup

./: AUTH_ROUTING_CHANGES.md  README.md  makefile
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/config/: settings.py
backend/app/routes/: auth.py
backend/app/schemas/: roast.py
backend/app/services/: db_service.py  roast_service.py
backend/tests/: list_models.py  test_api.py  test_gemini.py  test_hardened_service.py  test_supabase_integration.py
src/: App.tsx
src/components/: ColdStartLoader.tsx
src/components/layout/: DashboardSidebar.tsx  Footer.tsx  Navbar.tsx
src/lib/: api.ts  auth.ts  navigation.ts
src/pages/: About.tsx  Dashboard.tsx  Index.tsx  Pricing.tsx  Result.tsx  Roast.tsx
src/pages/auth/: Continue.tsx  Login.tsx  README.md  Signup.tsx
