[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "requests==2.32.5",
    "google-generativeai==0.3.2",
    "tenacity==9.1.2",
    "supabase==2.27.1",
    "PyJWT>=2.10.1",
    "slowapi==0.1.9",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=7.0",
    "ruff>=0.4.0",
]
